--- a/index.html
+++ b/index.html
@@ -1,16 +1,19 @@
 <!DOCTYPE html>
 <html lang="zh">
-  <head>
-    <meta charset="UTF-8" />
-    <link rel="icon" href="/assets/closure.ico" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>可露希尔小卖部</title>
-  </head>
-  <body>
-    <div id="app"></div>
-    <script src="/skadi.js"></script>
-    <script src="//www.recaptcha.net/recaptcha/api.js?render=6LfrMU0mAAAAADoo9vRBTLwrt5mU0HvykuR3l8uN"></script>
-    <script src="//static.geetest.com/v4/gt4.js"></script>
-    <script type="module" src="/src/main.ts"></script>
-  </body>
+
+<head>
+  <meta charset="UTF-8" />
+  <link rel="icon" href="/assets/closure.ico" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>可露希尔小卖部</title>
+</head>
+
+<body>
+  <div id="app"></div>
+  <!-- <script src="/skadi.js"></script> -->
+  <script src="//www.recaptcha.net/recaptcha/api.js?render=6LfrMU0mAAAAADoo9vRBTLwrt5mU0HvykuR3l8uN"></script>
+  <script src="//static.geetest.com/v4/gt4.js"></script>
+  <script type="module" src="/src/main.ts"></script>
+</body>
+
 </html>
