--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
   <script src="/skadi.js"></script>
   <script src="//www.recaptcha.net/recaptcha/api.js?render=6LfrMU0mAAAAADoo9vRBTLwrt5mU0HvykuR3l8uN"></script>
   <script src="//static.geetest.com/v4/gt4.js"></script>
+  <script src="https://static.geetest.com/static/js/gt.0.5.0.js"></script>
   <script type="module" src="/src/main.ts"></script>
 </body>
 
