--- a/index.html
+++ b/index.html
@@ -12,8 +12,10 @@
   <div id="app"></div>
   <script src="/skadi.js"></script>
   <script src="//www.recaptcha.net/recaptcha/api.js?render=6LfrMU0mAAAAADoo9vRBTLwrt5mU0HvykuR3l8uN"></script>
-  <script src="//static.geetest.com/v4/gt4.js"></script>
+  <!-- Geetest v3 for Arknights game captcha -->
   <script src="https://static.geetest.com/static/js/gt.0.5.0.js"></script>
+  <!-- Geetest v4 for general captcha -->
+  <script src="//static.geetest.com/v4/gt4.js"></script>
   <script type="module" src="/src/main.ts"></script>
 </body>
 
