--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 
 <body>
   <div id="app"></div>
-  <script src="/skadi.js"></script>
+  <!-- <script src="/skadi.js"></script> -->
   <script src="//www.recaptcha.net/recaptcha/api.js?render=6LfrMU0mAAAAADoo9vRBTLwrt5mU0HvykuR3l8uN"></script>
   <!-- Geetest v3 for Arknights game captcha -->
   <script src="//static.geetest.com/static/js/gt.0.5.0.js"></script>
