--- a/index.html
+++ b/index.html
@@ -1,3 +1,11 @@
+<!--
+ * @Author: jackjieYYY 53422254+jackjieYYY@users.noreply.github.com
+ * @Date: 2026-01-20 23:48:57
+ * @LastEditors: jackjieYYY 53422254+jackjieYYY@users.noreply.github.com
+ * @LastEditTime: 2026-01-22 09:53:21
+ * @FilePath: /closureStudio/index.html
+ * @Description: 这是默认设置,请设置`customMade`, 打开koroFileHeader查看配置 进行设置: https://github.com/OBKoro1/koro1FileHeader/wiki/%E9%85%8D%E7%BD%AE
+-->
 <!DOCTYPE html>
 <html lang="zh">
 
@@ -10,7 +18,7 @@
 
 <body>
   <div id="app"></div>
-  <!-- <script src="/skadi.js"></script> -->
+  <script src="/skadi.js"></script>
   <script src="//www.recaptcha.net/recaptcha/api.js?render=6LfrMU0mAAAAADoo9vRBTLwrt5mU0HvykuR3l8uN"></script>
   <!-- Geetest v3 for Arknights game captcha -->
   <script src="//static.geetest.com/static/js/gt.0.5.0.js"></script>
